# plogr

./: .Rbuildignore  .gitignore  .travis.yml  404.html  CMakeLists.txt  DESCRIPTION  LICENSE-text.html  NEWS.md  README.Rmd  README.md  appveyor.yml  authors.html  configure.win  cran-comments.md  index.html  pkgdown.yml  plogr.Rproj  sitemap.xml
.ccache/1/: stats
.ccache/1/1/: 480o4gqa9f9c6gjd3g5dhq70rlboj86R
.ccache/1/2/: 4a10dr2eqiobje6oh8gqlvc8jnkm9voR
.ccache/1/3/: 9er2eeb999orn9oqr7equeg5f9ckposM
.ccache/3/5/: 8acvqrqutt7curc1dac8alu3uum941qR
.ccache/4/f/: 2an34dd9vd1219s6qh4nsfonnk18g1uM
.ccache/5/: stats
.ccache/5/9/: b8ckbd8sgh0sdl0unfocrdksungkf4qM
R/: plogr-package.R
inst/: include
inst/include/: plog  plogr.h
inst/include/plog/: Compatibility.h  Init.h  InitFile.h  Record.h  Util.h
inst/include/plog/Appenders/: RollingFileAppender.h
man/: plogr-package.Rd
news/: index.html
reference/: index.html  plogr-package.html
src/: Makevars  Makevars.local  test.cpp
